Fixed button alignment on iPhone

--- a/src/styles/kidoju.widgets.quiz.less
+++ b/src/styles/kidoju.widgets.quiz.less
@@ -1,5 +1,6 @@
 .kj-quiz {
     .kj-quiz-item {
+        box-sizing: border-box !important; // fixes button alignment on iPhone
         margin-bottom: 0.1em;
         input.k-radio {
             display: none;
